fix: show Featured Work images at natural aspect ratio instead of cropping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -630,8 +630,6 @@ li::marker {
 
 .featured-card-img {
   width: 100%;
-  height: 180px;
-  object-fit: cover;
   display: block;
 }
 
